--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,5 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/piano-roll.css">
 </head>
-<body>
-    
-</body>
+<body></body>
 </html>
