--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Piano Roll</title>
-    <script src="scripts/script.js"></script>
-    <script>Object.assign(window, _)</script>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/piano-roll.css" />
+    <script src="scripts/script.js"></script>
+    <script>
+      Object.assign(window, _)
+    </script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Piano-roll</h1>
+      <h2>CSS based piano roll</h2>
+    </header>
+    <main></main>
+    <footer>
+      <p><a href="https://gitlab.com/yukulele/piano-roll/">view source code on Gitlab</a></p>
+    </footer>
+  </body>
 </html>
